--- a/RandomColors/Base.lproj/Main.storyboard
+++ b/RandomColors/Base.lproj/Main.storyboard
@@ -16,20 +16,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ol-AN-0Ax">
-                                <rect key="frame" x="159" y="409" width="75" height="21"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="THc-JZ-rFz">
+                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="BtZ-tb-MKa">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BtZ-tb-MKa" id="gtl-66-WWT">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
-                                    <action selector="tempButtonTapped:" destination="77d-G0-BQF" eventType="touchUpInside" id="5UZ-th-tkb"/>
+                                    <outlet property="dataSource" destination="77d-G0-BQF" id="bCO-o7-ODO"/>
+                                    <outlet property="delegate" destination="77d-G0-BQF" id="MCH-ve-lok"/>
                                 </connections>
-                            </button>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="f42-cm-koy"/>
-                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="0ol-AN-0Ax" firstAttribute="centerX" secondItem="PLd-7Z-ME9" secondAttribute="centerX" id="ojE-IO-Frb"/>
-                            <constraint firstItem="0ol-AN-0Ax" firstAttribute="centerY" secondItem="PLd-7Z-ME9" secondAttribute="centerY" id="q2c-yP-fj6"/>
+                            <constraint firstItem="THc-JZ-rFz" firstAttribute="leading" secondItem="f42-cm-koy" secondAttribute="leading" id="0CA-cb-1mx"/>
+                            <constraint firstItem="THc-JZ-rFz" firstAttribute="top" secondItem="f42-cm-koy" secondAttribute="top" id="7W4-Sh-Yx4"/>
+                            <constraint firstItem="f42-cm-koy" firstAttribute="trailing" secondItem="THc-JZ-rFz" secondAttribute="trailing" id="TNN-JV-71v"/>
+                            <constraint firstItem="f42-cm-koy" firstAttribute="bottom" secondItem="THc-JZ-rFz" secondAttribute="bottom" id="UeB-3Y-125"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Colors" id="VL2-VF-qC0"/>
@@ -46,8 +58,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RO0-at-Nsz" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cbB-KL-FRE">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="cbB-KL-FRE">
+                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -79,9 +91,6 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
